--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
-    "electron-updater": "^6.3.9"
+    "electron-updater": "^6.3.9",
+    "music-metadata": "^11.2.1",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
