--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@mui/material": "^7.1.0",
     "electron-updater": "^6.3.9",
     "music-metadata": "^11.2.1",
-    "react-router-dom": "^7.6.0"
+    "react-router-dom": "^7.6.0",
+    "react-slider": "^2.0.6"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "@types/react-slider": "^1.3.6",
     "@vitejs/plugin-react": "^4.3.3",
     "autoprefixer": "^10.4.20",
     "electron": "^33.2.0",
