fix: big part of updates (state/stats/decomposition)

--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "music-metadata": "^11.2.1",
     "react-router-dom": "^7.6.0",
     "react-slider": "^2.0.6",
-    "recharts": "^2.15.3"
+    "recharts": "^2.15.3",
+    "uvcanvas": "^0.3.0"
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
