feat: big part of updates

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@supabase/supabase-js": "^2.49.8",
     "dotenv": "^16.5.0",
     "electron-updater": "^6.3.9",
+    "framer-motion": "^12.12.2",
     "lucide-react": "^0.510.0",
     "music-metadata": "^11.2.1",
     "react-router-dom": "^7.6.0",
