--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dotenv": "^16.5.0",
     "electron-updater": "^6.3.9",
     "framer-motion": "^12.12.2",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.510.0",
     "music-metadata": "^11.2.1",
     "react-router-dom": "^7.6.0",
@@ -37,6 +38,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.48.2",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-slider": "^1.3.6",
